🩹 fix: Implement flex wrap for small screens

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
     display: flex;
     justify-content: space-between;
     gap: 16px;
+    flex-wrap: wrap;
 }
 
 .buttons-container {
@@ -42,6 +43,7 @@ body {
     justify-content: space-between;
     gap: 16px;
     margin: 16px;
+    flex-wrap: wrap;
 }
 
 #player-score,
